--- a/Privilegia/Web.config
+++ b/Privilegia/Web.config
@@ -23,7 +23,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <sessionState mode="Off"></sessionState>
+    <pages maintainScrollPositionOnPostBack="false">
+    </pages>
     <authentication mode="None"></authentication>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
