--- a/Privilegia/Privilegia.csproj
+++ b/Privilegia/Privilegia.csproj
@@ -59,6 +59,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FileHelpers, Version=3.1.5.0, Culture=neutral, PublicKeyToken=3e0c08d59cc3d657, processorArchitecture=MSIL">
+      <HintPath>..\packages\FileHelpers.3.1.5\lib\net45\FileHelpers.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -148,6 +152,7 @@
     <Compile Include="Controllers\PersonasDeContactoController.cs" />
     <Compile Include="Controllers\ProductosController.cs" />
     <Compile Include="Controllers\PublicidadController.cs" />
+    <Compile Include="Controllers\SubidaArchivosController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -165,6 +170,30 @@
     <Compile Include="Migrations\201703131324045_modificadaPublicidadTotal.Designer.cs">
       <DependentUpon>201703131324045_modificadaPublicidadTotal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703131917444_anadidoPlanDeMediosFacturacion.cs" />
+    <Compile Include="Migrations\201703131917444_anadidoPlanDeMediosFacturacion.Designer.cs">
+      <DependentUpon>201703131917444_anadidoPlanDeMediosFacturacion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703140826173_anadidoTotalEnFacturas.cs" />
+    <Compile Include="Migrations\201703140826173_anadidoTotalEnFacturas.Designer.cs">
+      <DependentUpon>201703140826173_anadidoTotalEnFacturas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703140829269_cambiadoTotalPorImporteFacturasPublicidad.cs" />
+    <Compile Include="Migrations\201703140829269_cambiadoTotalPorImporteFacturasPublicidad.Designer.cs">
+      <DependentUpon>201703140829269_cambiadoTotalPorImporteFacturasPublicidad.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703140844154_cambiadoImportePorTotalFacturasPublicidad.cs" />
+    <Compile Include="Migrations\201703140844154_cambiadoImportePorTotalFacturasPublicidad.Designer.cs">
+      <DependentUpon>201703140844154_cambiadoImportePorTotalFacturasPublicidad.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703171118403_anadidoFacturacionPremios.cs" />
+    <Compile Include="Migrations\201703171118403_anadidoFacturacionPremios.Designer.cs">
+      <DependentUpon>201703171118403_anadidoFacturacionPremios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703171206305_anadidoFacturacionPremiosFechaCreacion.cs" />
+    <Compile Include="Migrations\201703171206305_anadidoFacturacionPremiosFechaCreacion.Designer.cs">
+      <DependentUpon>201703171206305_anadidoFacturacionPremiosFechaCreacion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Archivos\ILogoRepository.cs" />
     <Compile Include="Models\Archivos\Logo.cs" />
@@ -175,9 +204,14 @@
     <Compile Include="Models\Direcciones\DireccionRepository.cs" />
     <Compile Include="Models\Direcciones\DireccionSecundariaRepository.cs" />
     <Compile Include="Models\Direcciones\IDireccionRepository.cs" />
+    <Compile Include="Models\FacturacionPremios\FacturacionPremiosModel.cs" />
+    <Compile Include="Models\FacturacionPremios\FacturacionPremiosRepository.cs" />
+    <Compile Include="Models\FacturacionPremios\IFacturacionPremiosRepository.cs" />
     <Compile Include="Models\FacturacionPublicidad\FacturacionPublicidadModel.cs" />
     <Compile Include="Models\FacturacionPublicidad\FacturacionPublicidadRepository.cs" />
     <Compile Include="Models\FacturacionPublicidad\IFacturacionPublicidadRepository.cs" />
+    <Compile Include="Models\Ficheros\FicheroGuijuelo.cs" />
+    <Compile Include="Models\Ficheros\FicheroYoRespondo.cs" />
     <Compile Include="Models\JQueryDataTableParamModel.cs" />
     <Compile Include="Models\Partner\IPartnerRepository.cs" />
     <Compile Include="Models\PersonasDeContacto\IPersonaDeContactoRepository.cs" />
@@ -202,6 +236,7 @@
     <Compile Include="Models\Partner\PartnerInternoRepository.cs" />
     <Compile Include="Models\Partner\PartnerRepository.cs" />
     <Compile Include="ViewModels\FacturaPublicidadViewModel.cs" />
+    <Compile Include="ViewModels\FicheroViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-select.css" />
@@ -597,6 +632,9 @@
     <Content Include="Views\FacturacionPublicidad\Index.cshtml" />
     <Content Include="Views\Informes\VerFactura.cshtml" />
     <Content Include="Views\Informes\Index.cshtml" />
+    <Content Include="Views\Informes\Publicidad.cshtml" />
+    <Content Include="Views\subidaArchivos\Index.cshtml" />
+    <Content Include="Views\subidaArchivos\VerDatosArchivo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -617,6 +655,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703131324045_modificadaPublicidadTotal.resx">
       <DependentUpon>201703131324045_modificadaPublicidadTotal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703131917444_anadidoPlanDeMediosFacturacion.resx">
+      <DependentUpon>201703131917444_anadidoPlanDeMediosFacturacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703140826173_anadidoTotalEnFacturas.resx">
+      <DependentUpon>201703140826173_anadidoTotalEnFacturas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703140829269_cambiadoTotalPorImporteFacturasPublicidad.resx">
+      <DependentUpon>201703140829269_cambiadoTotalPorImporteFacturasPublicidad.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703140844154_cambiadoImportePorTotalFacturasPublicidad.resx">
+      <DependentUpon>201703140844154_cambiadoImportePorTotalFacturasPublicidad.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703171118403_anadidoFacturacionPremios.resx">
+      <DependentUpon>201703171118403_anadidoFacturacionPremios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703171206305_anadidoFacturacionPremiosFechaCreacion.resx">
+      <DependentUpon>201703171206305_anadidoFacturacionPremiosFechaCreacion.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
