--- a/Privilegia/packages.config
+++ b/Privilegia/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap-toggle.less" version="2.2.0.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.es" version="6.1.3" targetFramework="net452" />
+  <package id="FileHelpers" version="3.1.5" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jquery.datatables" version="1.10.12" targetFramework="net452" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net452" />
