--- a/Privilegia/Web.config
+++ b/Privilegia/Web.config
@@ -10,9 +10,9 @@
   </configSections>
   <connectionStrings>
     <!--Base de datos Local-->
-    <add name="Contexto" connectionString="Data Source=DESKTOP-QIBSQQ7;Initial Catalog=Privilegia;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <!--<add name="Contexto" connectionString="Data Source=DESKTOP-QIBSQQ7;Initial Catalog=Privilegia;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />-->
     <!--Base de datos Desarrollo Aptus-->
-    <!--<add name="Contexto" connectionString="data source=51.255.80.193; initial catalog=Privilegia;Integrated Security=False;MultipleActiveResultSets=True;App=EntityFramework;User ID=privilegia;Password=##privilegia##;Connect Timeout=60" providerName="System.Data.SqlClient" />-->
+    <add name="Contexto" connectionString="data source=51.255.80.193; initial catalog=Privilegia;Integrated Security=False;MultipleActiveResultSets=True;App=EntityFramework;User ID=privilegia;Password=##privilegia##;Connect Timeout=60" providerName="System.Data.SqlClient" />
     <!--Base de datos Desarrollo Externa-->
     <!--<add name="Contexto" connectionString="data source=NS3035296\SQLEXPRESS; initial catalog=Privilegia;Integrated Security=False;MultipleActiveResultSets=True;App=EntityFramework;User ID=privilegia;Password=##privilegia##;Connect Timeout=60" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
@@ -27,7 +27,7 @@
     </pages>
     <authentication mode="None"></authentication>
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime maxRequestLength="20480" executionTimeout="180" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
